ARROW-8142: [C++][Compute] Explicit no chunks case for WrapDatumsLike